added X-Authorization flag. added wiremock for OIDC discovery and JWK keyset